@@ -1,3 +1,9 @@
+2010-12-07  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* archive.c (_bfd_get_elt_at_filepos): Copy BFD_COMPRESS and
+	BFD_DECOMPRESS.
+	(bfd_openr_next_archived_file): Revert the last change.
+
 2010-12-06  Mike Frysinger  <vapier@gentoo.org>
 
 	* Makefile.am (!INSTALL_LIBBFD/bfdinclude_HEADERS): Set to nothing.
